<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CharacterCustomizationFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/characterCustomizationTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/characterCustomizationTitle"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/characterCustomizationOptions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/characterCustomizationOptions"
        android:layout_width="386dp"
        android:layout_height="506dp"
        android:orientation="horizontal"
        android:baselineAligned="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65999997">

        <LinearLayout
            android:id="@+id/optionBalanced"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/optionBalancedImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/balancedPlayerImage"
                android:scaleType="fitXY"
                android:src="@drawable/balancedplayer_2" />

            <TextView
                android:id="@+id/defaultOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/defaultStats"
                android:textSize="13.5sp" />

            <Button
                android:id="@+id/defaultButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/defaultOptionLabel" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/optionMagic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/optionMagicImage"
                android:layout_width="match_parent"
                android:layout_height="165dp"
                android:layout_marginBottom="20dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/magicPlayerImage"
                android:src="@drawable/magicplayer_2" />

            <TextView
                android:id="@+id/magOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/magFocusStats"
                android:textSize="13.5sp" />

            <Button
                android:id="@+id/magButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:text="@string/magOptionLabel" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/optionPhysical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/optionPhysicalImage"
                android:layout_width="match_parent"
                android:layout_height="165dp"
                android:layout_marginBottom="20dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/physicalPlayerImage"
                android:src="@drawable/physicalplayer_2" />

            <TextView
                android:id="@+id/physOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/physFocusStats"
                android:textSize="13.5sp" />

            <Button
                android:id="@+id/physButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/physOptionLabel" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>